--- a/pom.xml
+++ b/pom.xml
@@ -67,5 +67,10 @@
       <version>3.1.3.RELEASE</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-commons-core</artifactId>
+      <version>1.4.0.RELEASE</version>
+    </dependency>
   </dependencies>
 </project>
