--- a/pom.xml
+++ b/pom.xml
@@ -49,5 +49,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>3.1.3.RELEASE</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
