--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,6 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>couchbase</groupId>
-  <artifactId>couchbase-spring</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -68,4 +67,5 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <artifactId>spring-data-couchbase</artifactId>
 </project>
