--- a/pom.xml
+++ b/pom.xml
@@ -72,5 +72,10 @@
       <artifactId>spring-data-commons-core</artifactId>
       <version>1.4.0.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-core-asl</artifactId>
+      <version>1.9.11</version>
+    </dependency>
   </dependencies>
 </project>
