Refactoring read to use instantiators.

--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
     </dependency>
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
-      <artifactId>jackson-core-asl</artifactId>
+      <artifactId>jackson-mapper-asl</artifactId>
       <version>1.9.12</version>
     </dependency>
   </dependencies>
