--- a/pom.xml
+++ b/pom.xml
@@ -77,5 +77,10 @@
       <artifactId>jackson-mapper-asl</artifactId>
       <version>1.9.12</version>
     </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-tx</artifactId>
+    	<version>3.2.1.RELEASE</version>
+    </dependency>
   </dependencies>
 </project>
