--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>couchbase</groupId>
+  <groupId>com.couchbase</groupId>
+  <artifactId>spring-data-couchbase</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -21,8 +22,11 @@
       </plugin>
     </plugins>
   </build>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <couchbase>1.1.6</couchbase>
+    <spring>3.2.3.RELEASE</spring>
   </properties>
 
   <repositories>
@@ -31,9 +35,6 @@
       <name>Couchbase Maven Repository</name>
       <layout>default</layout>
       <url>http://files.couchbase.com/maven2/</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
     </repository>
   </repositories>
 
@@ -41,13 +42,12 @@
     <dependency>
       <groupId>couchbase</groupId>
       <artifactId>couchbase-client</artifactId>
-      <version>1.1.5</version>
+      <version>${couchbase}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>3.2.2.RELEASE</version>
-      <type>jar</type>
+      <version>${spring}</version>
     </dependency>
     <dependency>
       <groupId>cglib</groupId>
@@ -63,13 +63,13 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-      <version>3.2.2.RELEASE</version>
+      <version>${spring}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework.data</groupId>
-      <artifactId>spring-data-commons-core</artifactId>
-      <version>1.4.1.RELEASE</version>
+      <artifactId>spring-data-commons</artifactId>
+      <version>1.5.1.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
@@ -79,8 +79,8 @@
     <dependency>
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-tx</artifactId>
-    	<version>3.2.2.RELEASE</version>
+    	<version>${spring}</version>
     </dependency>
   </dependencies>
-  <artifactId>spring-data-couchbase</artifactId>
+  
 </project>
