--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 #
 # This property is MANDATORY
 #
-springDataCouchbaseVersion = 1.0.0
+springDataCouchbaseVersion = 1.0.0.M1
 
 #
 # Runtime Dependencies
