DATACOUCH-16 - Allow View customization through @View annotations.
An initial first attempt at allowing for basic View customization using the
@View annotation.

For now, it does not support "dynamic" finders, such as findByUsername, but
I'm sure it will come shortly aftewards.

Also added in hamcrest library to gradually transistion deprecated JUnit
methods to a better assertion library :-)

-=david=-

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
       <version>${jackson}</version>
     </dependency>
 
+    <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-all</artifactId>
+        <version>${hamcrest}</version>
+        <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <repositories>
