--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <couchbase>1.2.0</couchbase>
     <jackson>2.2.3</jackson>
     <springdata.commons>1.6.1.RELEASE</springdata.commons>
+    <hamcrest>1.3</hamcrest>
   </properties>
 
   <dependencies>
@@ -85,6 +86,13 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>${jackson}</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-all</artifactId>
+        <version>${hamcrest}</version>
+        <scope>test</scope>
     </dependency>
 
   </dependencies>
