--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,14 @@
         <scope>test</scope>
     </dependency>
 
+
+    <dependency>
+      <groupId>com.googlecode.catch-exception</groupId>
+      <artifactId>catch-exception</artifactId>
+      <version>1.2.0</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <repositories>
