DATACOUCH-61 - Add Converter support for Jodatime
This changeset adds converters for Jodatime to unix timestamps and
back if jodatime is found on the classpath.

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
     </dependency>
 
     <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>${jodatime}</version>
+      <optional>true</optional>
+    </dependency>
+
+    <dependency>
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-all</artifactId>
         <version>${hamcrest}</version>
