--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <couchbase>1.3.1</couchbase>
     <jackson>2.3.1</jackson>
     <springdata.commons>1.6.3.RELEASE</springdata.commons>
+    <validation>1.0.0.GA</validation>
   </properties>
 
   <dependencies>
@@ -75,6 +76,13 @@
     </dependency>
 
     <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>4.2.0.Final</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.1</version>
@@ -91,6 +99,14 @@
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
       <version>${jodatime}</version>
+      <optional>true</optional>
+    </dependency>
+
+    <!-- JSR 303 Validation -->
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>${validation}</version>
       <optional>true</optional>
     </dependency>
 
