--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,16 @@
   <parent>
     <groupId>org.springframework.data.build</groupId>
     <artifactId>spring-data-parent</artifactId>
-    <version>1.3.1.RELEASE</version>
+    <version>1.4.0.BUILD-SNAPSHOT</version>
   </parent>
 
   <properties>
+
+    <dist.key>DATACOUCH</dist.key>
+
     <couchbase>1.3.2</couchbase>
     <jackson>2.3.2</jackson>
-    <springdata.commons>1.7.1.RELEASE</springdata.commons>
+    <springdata.commons>1.8.0.BUILD-SNAPSHOT</springdata.commons>
     <validation>1.0.0.GA</validation>
   </properties>
 
@@ -100,15 +103,15 @@
 
   <repositories>
     <repository>
-      <id>spring-lib-release</id>
+      <id>spring-libs-release</id>
       <url>http://repo.spring.io/libs-release</url>
     </repository>
   </repositories>
 
   <pluginRepositories>
     <pluginRepository>
-      <id>spring-release-bundles</id>
-      <url>http://repo.spring.io/maven/bundles/release</url>
+      <id>spring-plugins-release</id>
+      <url>http://repo.spring.io/plugins-release</url>
     </pluginRepository>
   </pluginRepositories>
 
