DATACOUCH-73 - Add snapshot repository

--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,10 @@
       <id>spring-libs-release</id>
       <url>http://repo.spring.io/libs-release</url>
     </repository>
+    <repository>
+      <id>spring-libs-snapshot</id>
+      <url>http://repo.spring.io/libs-snapshot</url>
+    </repository>
   </repositories>
 
   <pluginRepositories>
