--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.springframework.data.build</groupId>
     <artifactId>spring-data-parent</artifactId>
-    <version>1.4.0.BUILD-SNAPSHOT</version>
+    <version>1.4.0.M1</version>
   </parent>
 
   <properties>
@@ -23,7 +23,7 @@
 
     <couchbase>1.3.2</couchbase>
     <jackson>2.3.2</jackson>
-    <springdata.commons>1.8.0.BUILD-SNAPSHOT</springdata.commons>
+    <springdata.commons>1.8.0.M1</springdata.commons>
     <validation>1.0.0.GA</validation>
   </properties>
 
@@ -32,17 +32,14 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>${spring}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>${spring}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-tx</artifactId>
-      <version>${spring}</version>
     </dependency>
 
     <dependency>
@@ -103,12 +100,8 @@
 
   <repositories>
     <repository>
-      <id>spring-libs-release</id>
-      <url>http://repo.spring.io/libs-release</url>
-    </repository>
-    <repository>
-      <id>spring-libs-snapshot</id>
-      <url>http://repo.spring.io/libs-snapshot</url>
+      <id>spring-libs-milestone</id>
+      <url>http://repo.spring.io/libs-milestone</url>
     </repository>
   </repositories>
 
