--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>org.springframework.data</groupId>
   <artifactId>spring-data-couchbase</artifactId>
-  <version>1.1.0.M1</version>
+  <version>1.1.0.BUILD-SNAPSHOT</version>
 
   <name>Spring Data Couchbase</name>
   <description>Spring Data integration for Couchbase</description>
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.springframework.data.build</groupId>
     <artifactId>spring-data-parent</artifactId>
-    <version>1.4.0.M1</version>
+    <version>1.4.0.BUILD-SNAPSHOT</version>
   </parent>
 
   <properties>
@@ -23,7 +23,7 @@
 
     <couchbase>1.3.2</couchbase>
     <jackson>2.3.2</jackson>
-    <springdata.commons>1.8.0.M1</springdata.commons>
+    <springdata.commons>1.8.0.BUILD-SNAPSHOT</springdata.commons>
     <validation>1.0.0.GA</validation>
   </properties>
 
@@ -100,8 +100,8 @@
 
   <repositories>
     <repository>
-      <id>spring-libs-milestone</id>
-      <url>http://repo.spring.io/libs-milestone</url>
+      <id>spring-libs-snapshot</id>
+      <url>http://repo.spring.io/libs-snapshot</url>
     </repository>
   </repositories>
 
