--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.springframework.data</groupId>
   <artifactId>spring-data-couchbase</artifactId>
-  <version>1.1.0.RELEASE</version>
+  <version>1.1.1.BUILD-SNAPSHOT</version>
 
   <name>Spring Data Couchbase</name>
   <description>Spring Data integration for Couchbase</description>
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.springframework.data.build</groupId>
     <artifactId>spring-data-parent</artifactId>
-    <version>1.4.0.RELEASE</version>
+    <version>1.4.1.BUILD-SNAPSHOT</version>
   </parent>
 
   <properties>
@@ -23,7 +23,7 @@
 
     <couchbase>1.4.1</couchbase>
     <jackson>2.3.2</jackson>
-    <springdata.commons>1.8.0.RELEASE</springdata.commons>
+    <springdata.commons>1.8.1.BUILD-SNAPSHOT</springdata.commons>
     <validation>1.0.0.GA</validation>
   </properties>
 
@@ -100,8 +100,8 @@
 
   <repositories>
     <repository>
-      <id>spring-libs-release</id>
-      <url>http://repo.spring.io/libs-release</url>
+      <id>spring-libs-snapshot</id>
+      <url>http://repo.spring.io/libs-snapshot</url>
     </repository>
   </repositories>
 
