--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,11 @@
 
     <dist.key>DATACOUCH</dist.key>
 
-    <couchbase>1.4.4</couchbase>
-    <jackson>2.3.2</jackson>
+    <couchbase>2.0.0</couchbase>
+    <jackson>2.4.3</jackson>
     <springdata.commons>1.10.0.BUILD-SNAPSHOT</springdata.commons>
     <validation>1.0.0.GA</validation>
+    <spring>4.1.1.RELEASE</spring>
   </properties>
 
   <dependencies>
@@ -50,14 +51,13 @@
 
     <dependency>
       <groupId>com.couchbase.client</groupId>
-      <artifactId>couchbase-client</artifactId>
+      <artifactId>java-client</artifactId>
       <version>${couchbase}</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-      <version>${spring}</version>
       <scope>test</scope>
     </dependency>
 
