--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,16 @@
     <springdata.commons>1.10.0.BUILD-SNAPSHOT</springdata.commons>
     <validation>1.0.0.GA</validation>
     <spring>4.1.1.RELEASE</spring>
+    <reflections>0.9.9-RC2</reflections>
   </properties>
 
   <dependencies>
-
-    <dependency>
+	<dependency>
+		<groupId>org.reflections</groupId>
+		<artifactId>reflections</artifactId>
+		<version>${reflections}</version>
+	</dependency>
+	<dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
     </dependency>
