--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.springframework.data.build</groupId>
     <artifactId>spring-data-parent</artifactId>
-    <version>1.5.1.BUILD-SNAPSHOT</version>
+    <version>1.5.1.RELEASE</version>
   </parent>
 
   <properties>
@@ -23,7 +23,7 @@
 
     <couchbase>1.4.4</couchbase>
     <jackson>2.3.2</jackson>
-    <springdata.commons>1.9.1.BUILD-SNAPSHOT</springdata.commons>
+    <springdata.commons>1.9.1.RELEASE</springdata.commons>
     <validation>1.0.0.GA</validation>
   </properties>
 
@@ -100,8 +100,8 @@
 
   <repositories>
     <repository>
-      <id>spring-libs-snapshot</id>
-      <url>http://repo.spring.io/libs-snapshot</url>
+      <id>spring-libs-release</id>
+      <url>http://repo.spring.io/libs-release</url>
     </repository>
   </repositories>
 
