--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <dist.key>DATACOUCH</dist.key>
 
-    <couchbase>2.1.3</couchbase>
+    <couchbase>2.2.0-dp</couchbase>
     <jackson>2.3.2</jackson>
     <springdata.commons>1.11.0.BUILD-SNAPSHOT</springdata.commons>
     <validation>1.0.0.GA</validation>
@@ -125,6 +125,12 @@
     <repository>
       <id>spring-libs-snapshot</id>
       <url>https://repo.spring.io/libs-snapshot</url>
+    </repository>
+    <repository>
+      <id>couchbase</id>
+      <name>couchbase repo</name>
+      <url>http://files.couchbase.com/maven2</url>
+      <snapshots><enabled>false</enabled></snapshots>
     </repository>
   </repositories>
 
