--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>1.7.0.BUILD-SNAPSHOT</version>
+        <version>1.7.0.RC1</version>
     </parent>
 
     <properties>
