--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>1.7.0.RC1</version>
+        <version>1.7.0.BUILD-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -24,7 +24,7 @@
         <couchbase>2.2.0-dp2</couchbase>
         <couchbase.osgi>2.2.0</couchbase.osgi>
         <jackson>2.6.0</jackson>
-        <springdata.commons>1.11.0.RC1</springdata.commons>
+        <springdata.commons>1.11.0.BUILD-SNAPSHOT</springdata.commons>
         <validation>1.0.0.GA</validation>
     </properties>
 
@@ -124,8 +124,8 @@
 
     <repositories>
         <repository>
-            <id>spring-libs-milestone</id>
-            <url>https://repo.spring.io/libs-milestone</url>
+            <id>spring-libs-snapshot</id>
+            <url>https://repo.spring.io/libs-snapshot</url>
         </repository>
         <repository>
             <id>couchbase</id>
