--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
 
         <couchbase>2.2.2</couchbase>
         <couchbase.osgi>2.2.2</couchbase.osgi>
-        <jackson>2.6.0</jackson>
-        <springdata.commons>1.11.0.BUILD-SNAPSHOT</springdata.commons>
+        <jackson>2.6.2</jackson>
+        <springdata.commons>1.11.2.RELEASE</springdata.commons>
         <validation>1.0.0.GA</validation>
     </properties>
 
