--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>1.7.0.BUILD-SNAPSHOT</version>
+        <version>1.7.3.RELEASE</version>
     </parent>
 
     <properties>
@@ -23,7 +23,6 @@
 
         <couchbase>2.2.2</couchbase>
         <couchbase.osgi>2.2.2</couchbase.osgi>
-        <jackson>2.6.2</jackson>
         <springdata.commons>1.11.2.RELEASE</springdata.commons>
         <validation>1.0.0.GA</validation>
     </properties>
@@ -124,8 +123,8 @@
 
     <repositories>
         <repository>
-            <id>spring-libs-snapshot</id>
-            <url>https://repo.spring.io/libs-snapshot</url>
+            <id>spring-libs-milestone</id>
+            <url>https://repo.spring.io/libs-milestone</url>
         </repository>
     </repositories>
 
