DATACOUCH-201 - Prepare 2.0 GA release.

--- a/pom.xml
+++ b/pom.xml
@@ -123,8 +123,8 @@
 
     <repositories>
         <repository>
-            <id>spring-libs-milestone</id>
-            <url>https://repo.spring.io/libs-milestone</url>
+            <id>spring-libs-release</id>
+            <url>https://repo.spring.io/libs-release</url>
         </repository>
     </repositories>
 
