--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.springframework.data</groupId>
     <artifactId>spring-data-couchbase</artifactId>
-    <version>2.1.0.RELEASE</version>
+    <version>2.1.1.BUILD-SNAPSHOT</version>
 
     <name>Spring Data Couchbase</name>
     <description>Spring Data integration for Couchbase</description>
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>1.8.0.RELEASE</version>
+        <version>1.8.1.BUILD-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -23,7 +23,7 @@
 
         <couchbase>2.2.3</couchbase>
         <couchbase.osgi>2.2.3</couchbase.osgi>
-        <springdata.commons>1.12.0.RELEASE</springdata.commons>
+        <springdata.commons>1.12.1.BUILD-SNAPSHOT</springdata.commons>
         <validation>1.0.0.GA</validation>
     </properties>
 
@@ -123,8 +123,8 @@
 
     <repositories>
         <repository>
-            <id>spring-libs-release</id>
-            <url>https://repo.spring.io/libs-release</url>
+            <id>spring-libs-snapshot</id>
+            <url>https://repo.spring.io/libs-snapshot</url>
         </repository>
     </repositories>
 
