--- a/pom.xml
+++ b/pom.xml
@@ -123,8 +123,8 @@
 
   <repositories>
     <repository>
-      <id>spring-libs-release</id>
-      <url>https://repo.spring.io/libs-release</url>
+      <id>spring-libs-snapshot</id>
+      <url>https://repo.spring.io/libs-snapshot</url>
     </repository>
   </repositories>
 
