--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <couchbase>2.4.6</couchbase>
         <couchbase.osgi>2.4.6</couchbase.osgi>
         <springdata.commons>2.0.0.BUILD-SNAPSHOT</springdata.commons>
+        <java-module-name>spring.data.couchbase</java-module-name>
     </properties>
 
     <dependencies>
