DATACOUCH-341 - Add kotlin extension functions
Motivation
----------
Add kotin extension methods to couchbase and reactive couchbase
operations as required.

Changes
-------
Extensions leveraging reified type has been added.

Results
-------
It is now possible to use reified types rather than passing the java
class reference to some operation functions.

Original pull request: #160.

--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,20 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Kotlin extension -->
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>${kotlin}</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test</artifactId>
+            <version>${kotlin}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <repositories>
