DATACOUCH-392 - Add optional kotlin reflect dependency
The kotlin reflect dependency is required by Spring core for reflection
mapping parameters.

--- a/pom.xml
+++ b/pom.xml
@@ -180,11 +180,16 @@
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
+            <version>${kotlin}</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test</artifactId>
             <version>${kotlin}</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <repositories>
