DATACOUCH-450 - Prepare 2.2.23 (Ingalls SR23).

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +14,7 @@
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>1.9.23.BUILD-SNAPSHOT</version>
+        <version>1.9.23.RELEASE</version>
     </parent>
 
     <properties>
@@ -24,7 +23,7 @@
 
         <couchbase>2.2.8</couchbase>
         <couchbase.osgi>2.2.8</couchbase.osgi>
-        <springdata.commons>1.13.23.BUILD-SNAPSHOT</springdata.commons>
+        <springdata.commons>1.13.23.RELEASE</springdata.commons>
         <validation>1.0.0.GA</validation>
     </properties>
 
@@ -123,8 +122,8 @@
 
     <repositories>
         <repository>
-            <id>spring-libs-snapshot</id>
-            <url>https://repo.spring.io/libs-snapshot</url>
+            <id>spring-libs-release</id>
+            <url>https://repo.spring.io/libs-release</url>
         </repository>
     </repositories>
 
