Revert "DATACOUCH-550 - Refactored the usage of CouchbasePersistentEntityIndexCreator. (#298)"
This reverts commit 883c931cf419f91f12ba93786e1f293f77bc7467.

--- a/pom.xml
+++ b/pom.xml
@@ -157,9 +157,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.couchbase.mock</groupId>
+            <groupId>com.github.Couchbase</groupId>
             <artifactId>CouchbaseMock</artifactId>
-            <version>1.5.25</version>
+            <version>73e493d259</version>
             <scope>test</scope>
         </dependency>
 
