Handle expiry as always as Duration.
Closes #1204.

--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,23 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.2.0.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
         <!-- CDI -->
         <!-- Dependency order required to build against CDI 1.0 and test with CDI 2.0 -->
         <dependency>
