Test case for exceptions thrown from events - validation.
Closes #1224.

--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,20 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+            <version>3.0.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>3.0.0</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- CDI -->
         <!-- Dependency order required to build against CDI 1.0 and test with CDI 2.0 -->
         <dependency>
