Add support for Couchbase Transactions.
The fluent operations are common for options that are common to operations
 with and without transactions.  Once there is a transaction(ctx), or an
option specific to without-transactions (such as scanConsistency), the
interfaces are bifurcated, so that an non-transaction option cannot be
applied to a transaction operation, and a transaction(ctx) cannot be
applied where a non-transaction option has already been applied.

Closes #1145.

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <couchbase.osgi>3.2.5</couchbase.osgi>
         <springdata.commons>2.7.0-SNAPSHOT</springdata.commons>
         <java-module-name>spring.data.couchbase</java-module-name>
+        <couchbase-transactions>1.2.2</couchbase-transactions>
     </properties>
 
     <dependencyManagement>
@@ -37,6 +38,14 @@
     </dependencyManagement>
 
     <dependencies>
+
+    <dependency>
+        <groupId>com.couchbase.client</groupId>
+        <artifactId>couchbase-transactions</artifactId>
+        <version>${couchbase-transactions}</version>
+    </dependency>
+
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
