Support testing against Capella.
Support testing against Capella. Also includes sample to
use Capella control-plane.

Closes #1385.

--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -4,12 +4,15 @@
 # Options: containerized, mocked, unmanaged
 cluster.type=mocked
 # Default configs for both cases
-cluster.adminUsername=Administrator
-cluster.adminPassword=password
 # Default configs for the mocked environment
 cluster.mocked.numNodes=1
 cluster.mocked.numReplicas=1
 # Entry point configuration if not managed
 # value of hostname and ns_server port
 cluster.unmanaged.seed=127.0.0.1:8091
+cluster.adminUsername=Administrator
+cluster.adminPassword=password
+#cluster.unmanaged.seed=cb.zsibzkbgllfbcj8g.cloud.couchbase.com
+#cluster.adminUsername=user
+#cluster.adminPassword=Couch0base!
 cluster.unmanaged.numReplicas=0
